Fix: `examples` dir inside jar
- examples is now inside the archive alongside `src` and `bin`
- misc stuff like:
  - `.idea` modified: JDK 11 is set as the default JDK
  - `ResourceBundle`: `\ ` is replaced with ` `
  - `README.md`: Updated "Using the program"

--- a/src/main/resources/aguegu/dotmatrix/DotMatrixTest.properties
+++ b/src/main/resources/aguegu/dotmatrix/DotMatrixTest.properties
@@ -2,7 +2,7 @@ file=File
 new=New
 open=Open...
 save=Save
-save_as=Save\ As...
+save_as=Save As...
 exit=Exit
 frame=Frame
 
@@ -22,14 +22,14 @@ mode=Mode
 brightness=Brightness
 span=Span
 
-mode_prompt=Mode\ for\ All\ Frames:\ (0-2)
-brightness_prompt=Brightness\ for\ All\ Frames:\ (0x00-0xff)"
-span_prompt=Span\ for\ All\ Frames:\ (0x0000-0xffff)
-message=Developed\ by\ http://aGuegu.net | Updates by http://www.wzona.info
-time_span=Time\ Span
+mode_prompt=Mode for All Frames: (0-2)
+brightness_prompt=Brightness for All Frames: (0x00-0xff)"
+span_prompt=Span for All Frames: (0x0000-0xffff)
+message=Developed by http://aGuegu.net | Updates by http://www.wzona.info
+time_span=Time Span
 
-upper_led=Upper\ Led
-bottom_led=Bottom\ Led
+upper_led=Upper Led
+bottom_led=Bottom Led
 
 about=About
 
@@ -42,14 +42,14 @@ y+=Shift Y forward
 y-=Shift X backwards
 z+=Shift Z forward
 z-=Shift Z backwards
-3c=R3\ Clockwise
-3a=R3\ Anticlockwise
-2c=R2\ Clockwise
-2a=R2\ Anticlockwise
-1c=R1\ Clockwise
-1a=R1\ Anticlockwise
-0c=R0\ Clockwise
-0a=R0\ Anticlockwise
+3c=R3 Clockwise
+3a=R3 Anticlockwise
+2c=R2 Clockwise
+2a=R2 Anticlockwise
+1c=R1 Clockwise
+1a=R1 Anticlockwise
+0c=R0 Clockwise
+0a=R0 Anticlockwise
 xf=Flip X
 yf=Flip Y
 zf=Flip Z
