--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,16 @@ repositories {
     mavenCentral()
 }
 
+distributions {
+    main {
+        contents {
+            from("$projectDir/examples") {
+                into('examples')
+            }
+        }
+    }
+}
+
 dependencies {
     implementation 'com.neuronrobotics:nrjavaserial:5.2.1'
 }
