--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 application {
-    mainClass.set('aguegu.dotmatrix.DotMatrixTest')
+    mainClass.set('aguegu.dotmatrix.DotMatrixGUI')
 }
 
 sourceCompatibility = 11
